# hpyhex-rs

./: Cargo.toml  LICENSE  README.md
py/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  conf.py  index.rst  pyproject.toml
py/.cargo/: config.toml
py/bench/: bench-hpyhex  bench-hpyhex-rs  bench.py
py/docs/crates/py/: lib.rst
py/examples/: 01_binary_serialization.py  02_numpy_piece_conversion.py  03_numpy_board_analysis.py  04_pytorch_mlp.py  05_basic_game_simulation.py  06_advanced_ml_pipeline.py  07_nrsearch_algorithm.py  08_evaulation_based_mlp.py  09_selection_based_mlp.py  10_graph_algorithms  10_graph_algorithms.py  11_basic_cnn.py  12_pattern_recognition.py  README.md
py/src/: lib.rs
src/: game.rs  games.rs  hex.rs  lib.rs  main.rs  meta.rs
