[package]
name = "hpyhex"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hpyhex"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.21"
once_cell = "1.21.3"
pyo3 = "0.21"
rand = "0.9.2"

[build-dependencies]
pyo3-build-config = "0.21"
