[package]
name = "hpyhex"
version = "0.2.0"
edition = "2024"

[features]
default = []
numpy = ["dep:numpy"]
half = ["dep:half"]
full = ["numpy", "half"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hpyhex"
crate-type = ["cdylib"]

[dependencies]
half = { version = "2.7.1", optional = true }
numpy = { version = "0.21", optional = true }
once_cell = "1.21.3"
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.9.2"

[build-dependencies]
pyo3-build-config = "0.21"
