[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "hpyhex-rs"
description = "Simplified implementations of the HappyHex game components and hexagonal system in Rust."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "William Wu", email = "williamwutq@gmail.com"},
]
keywords = ["grid", "game", "happyhex", "hex", "pyo3", "rust"]

[project.urls]
Homepage = "https://github.com/williamwutq/hpyhex-rs"
Repository = "https://github.com/williamwutq/hpyhex-rs"

[tool.maturin]
bindings = "pyo3"
